# MeshProccessing

./: CMakeLists.txt  ReadMe.md  main.cpp
data/: system_greengrass_damo_G001133220021011.geojson  terrain.tiff  terrain.tiff.aux.xml
debug_file/: a.ply  b.ply  debug_polygon.ply  debuggerViewer.hipnc  ear_clipping.ply  ear_clipping3.ply  input_polygon.ply  input_polygon3.ply  isotropic_remesh.ply  isotropic_remesh3.ply  poisson_sample.csv  sample.csv  sample3.csv
ext/RapidJSON/cmake/: RapidJSONConfig.cmake
ext/libTinyTIFF/include/: tinytiff_export.h  tinytiffreader.h
ext/libTinyTIFF/lib/: TinyTIFFShared_Debug.lib  TinyTIFFShared_Release.lib  TinyTIFF_Debug.lib  TinyTIFF_Release.lib
ext/libTinyTIFF/lib/cmake/TinyTIFF/: TinyTIFFConfig-debug.cmake  TinyTIFFConfig-release.cmake  TinyTIFFConfig.cmake  TinyTIFFVersion.cmake
ext/libTinyTIFF/lib/cmake/TinyTIFFShared/: TinyTIFFSharedConfig-debug.cmake  TinyTIFFSharedConfig-release.cmake  TinyTIFFSharedConfig.cmake
ext/libTinyTIFF/share/doc/TinyTIFF/: readme.txt
include/: CDT.h  GeoIO.h  HeightMap.h  Sample.h  common.h  debugger.h  dedge.h  isotropicRemesher.h
src/: CDT.cpp  GeoIO.cpp  Sample.cpp  debugger.cpp  dedge.cpp  isotropicRemesher.cpp
test/: test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
